tests/semantic/extended_subtypes3/extended_subtypes3.err
Error: Atom's argument type is not a subtype of its declared type in file extended_subtypes3.dl at line 20
SymbolChain(a, a, a) :- SymbolChain(a, _, _).
---------------^------------------------------
The argument's declared type is symbolB in file extended_subtypes3.dl at line 18
.decl SymbolChain(a: symbolA, b: symbolB, c: symbolC)
---------------------------------^--------------------
Error: Atom's argument type is not a subtype of its declared type in file extended_subtypes3.dl at line 20
SymbolChain(a, a, a) :- SymbolChain(a, _, _).
------------------^---------------------------
The argument's declared type is symbolC in file extended_subtypes3.dl at line 18
.decl SymbolChain(a: symbolA, b: symbolB, c: symbolC)
---------------------------------------------^--------
Error: Atom's argument type is not a subtype of its declared type in file extended_subtypes3.dl at line 21
SymbolChain(b, b, b) :- SymbolChain(_, b, _).
------------------^---------------------------
The argument's declared type is symbolC in file extended_subtypes3.dl at line 18
.decl SymbolChain(a: symbolA, b: symbolB, c: symbolC)
---------------------------------------------^--------
3 errors generated, evaluation aborted
